--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ pyperclip==1.9.0
 gradio==5.23.1
 json-repair
 langchain-mistralai==0.2.4
+langchain-aws==0.2.18
 langchain-google-genai==2.0.8
 MainContentExtractor==0.0.4
